fix(timeline): align trajectory sections to strictly alternate left and right

--- a/src/pages/components/clients/styles/clients.module.scss
+++ b/src/pages/components/clients/styles/clients.module.scss
@@ -233,7 +233,7 @@
     top: 92vw;
     flex-direction: column;
     gap: var(--layout-columns-gap);
-    grid-column: 12 / 17;
+    grid-column: 7 / 12;
     background-color: var(--white);
   }
   .fourth {
@@ -271,7 +271,7 @@
     top: 125vw;
     flex-direction: column;
     gap: var(--layout-columns-gap);
-    grid-column: 7 / 12;
+    grid-column: 1 / 6;
     background-color: var(--white);
   }
   .fifth {
@@ -309,7 +309,7 @@
     top: 160vw;
     flex-direction: column;
     gap: var(--layout-columns-gap);
-    grid-column: 1 / 6;
+    grid-column: 7 / 12;
     background-color: var(--white);
   }
 }
